--- a/roles/proxy/templates/haproxy.cfg.j2
+++ b/roles/proxy/templates/haproxy.cfg.j2
@@ -8,27 +8,19 @@ global
         daemon
 
 defaults
-        log     global
-        mode    http
-        option  httplog
-        option  dontlognull
-        contimeout 5000
-        clitimeout 50000
-        srvtimeout 50000
-        errorfile 400 /etc/haproxy/errors/400.http
-        errorfile 403 /etc/haproxy/errors/403.http
-        errorfile 408 /etc/haproxy/errors/408.http
-        errorfile 500 /etc/haproxy/errors/500.http
-        errorfile 502 /etc/haproxy/errors/502.http
-        errorfile 503 /etc/haproxy/errors/503.http
-        errorfile 504 /etc/haproxy/errors/504.http
+	log global
+	retries 2
+	timeout connect 3000
+        timeout server 5000
+        timeout client 5000
+
 
 
 listen mysql-cluster
 	bind 0.0.0.0:3306
 	mode tcp
-	#option mysql-check user mysql_haproxy_check
+	option mysql-check user {{ haproxy_mysql_user }}
 	balance roundrobin
 {% for item in  groups['backend'] %}
-        server {{ item }} {{ item }}:3306
+        server {{ item }} {{ item }}:3306 check
 {% endfor %}
